# finalproject_Vylegjanina_m25-555

./: .gitignore  Makefile  README.md  config.json  main.py  pyproject.toml
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: constants.py  currancies.py  exceptions.py  models.py  usecase.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py  use_case.py  usecase.py
