[tool.poetry]
name = "finalproject-vylegjanina-m25-555"
version = "0.2.0"
description = "Платформа для отслеживания и симуляции торговли валютами"
authors = ["lalala-0 <vylegzhanina.alena@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
requests = "^2.32.5"
prettytable = "^3.16.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
